--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,17 @@ services:
   web:
     build: .
     ports:
-      - "8000:5000"
+      - "5000:5000"
     environment:
       - FLASK_ENV=development
       - DATABASE_URL=${DATABASE_URL}
-      - SECRET_KEY=${SECRET_KEY}
+    env_file:
+      - .env
     volumes:
       - .:/app
+    command: >
+      sh -c "
+        echo 'Environment variables:' &&
+        env &&
+        python run.py
+      "
