--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask==2.0.1
-pandas==1.3.3
+Flask==2.3.2
+Werkzeug==2.3.6
+numpy==1.21.0
+pandas==1.3.0
 openpyxl==3.0.9
 python-dotenv==0.19.1
 SQLAlchemy==1.4.31
