--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,12 @@ services:
       - "5000:5000"
     environment:
       - DATABASE_URL=${DATABASE_URL}
+      - PYTHONPATH=/app/app
     env_file:
       - .env
     volumes:
       - .:/app
-    command: jupyter notebook --ip=0.0.0.0 --port=5000 --no-browser --allow-root
+    command: jupyter notebook --ip=0.0.0.0 --port=5000 --no-browser --allow-root --NotebookApp.token='' --NotebookApp.password=''
     logging:
       driver: "json-file"
       options:
